Add project niceties

--- a/MouseHouse.xcodeproj/xcshareddata/xcschemes/MouseHouse.xcscheme
+++ b/MouseHouse.xcodeproj/xcshareddata/xcschemes/MouseHouse.xcscheme
@@ -40,6 +40,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Kill other app instances"
+               scriptText = "echo $(pkill &quot;$EXECUTABLE_NAME&quot;) &gt; /dev/null&#10;">
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
