--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: main
   pull_request:
-    branches: [ "main" ]
+    branches: main
 
 jobs:
   build:
@@ -16,4 +16,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: |
-          xcodebuild build -scheme "CenterMouse" | xcpretty && exit ${PIPESTATUS[0]}
+          xcrun xcodebuild build \
+            -scheme "CenterMouse" \
+            CODE_SIGN_IDENTITY=
