--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
 name: Build
 
 on:
-  push:
-    branches: main
   pull_request:
-    branches: main
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+      - release/**
 
 jobs:
   build:
@@ -12,7 +14,6 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Build
-        run: make build
+      - uses: actions/checkout@v6
+      - uses: jdx/mise-action@v3
+      - run: mise run build
